<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BCards</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_cam_label">Cam</string>
    <string name="btn_add_label">Add</string>
    <string name="btn_add_doc">Add</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_recognition_results">RecognitionResults</string>
    <string name="pref_baseurl_label">BaseUrl</string>
    <string name="pref_baseurl_key">baseurl</string>
    <string name="pref_baseurl_default">http://31.168.80.150:8030</string>
    <string name="unique_frag">unique_frag</string>
    <string name="title_activity_my_camera">MyCameraActivity</string>

    <string name="field_firstName">FirstName_:</string>
    <string name="field_lastName">LastName_:</string>
    <string name="field_position">Position___:</string>
    <string name="field_email">Email______:</string>
    <string name="field_mobile">Mobile_____:</string>
    <string name="field_website">Website____:</string>

    <string name="stubs_customerName"  >Customer_:</string>
    <string name="stubs_accountNo"     >Account__:</string>
    <string name="stubs_companyStreet" >Street____:</string>
    <string name="stubs_companyZipCode">Zipcode__:</string>
    <string name="stubs_companyState"  >State_____:</string>
    <string name="stubs_amountDue"     >Amount__:</string>

    <string name="title_activity_main">MainActivity</string>
</resources>
